--- a/Cargo.toml
+++ b/Cargo.toml
@@ -34,6 +34,7 @@ thiserror = "1.0.37"
 tracer = { path = "tracer" }
 vmm = { path = "vmm" }
 vmm-sys-util = "0.10.0"
+vm-config = { path = "vm-config" }
 vm-memory = "0.9.0"
 
 [build-dependencies]
@@ -87,6 +88,7 @@ members = [
     "virtio-devices",
     "vmm",
     "vm-allocator",
+    "vm-config",
     "vm-device",
     "vm-migration",
     "vm-virtio"
