--- a/vmm/Cargo.toml
+++ b/vmm/Cargo.toml
@@ -51,6 +51,7 @@ vhdx = { path = "../vhdx" }
 virtio-devices = { path = "../virtio-devices" }
 virtio-queue = "0.6.1"
 vm-allocator = { path = "../vm-allocator" }
+#vm-config = { path = "../vm-config" }
 vm-device = { path = "../vm-device" }
 vm-memory = { version = "0.9.0", features = ["backend-mmap", "backend-atomic", "backend-bitmap"] }
 vm-migration = { path = "../vm-migration" }
